bin/tests/snapshots/empty_pattern__fix_d258b2d28244a887c36cde36b8b3c30112c86c2090c39b776a1d03a64f503f40.snap
---
source: bin/tests/empty_pattern.rs
expression: "\"({ ... } @ inputs: inputs)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ ... } @ inputs: inputs)
+(inputs: inputs)
