bin/tests/snapshots/empty_pattern__lint_d258b2d28244a887c36cde36b8b3c30112c86c2090c39b776a1d03a64f503f40.snap
---
source: bin/tests/empty_pattern.rs
expression: "\"({ ... } @ inputs: inputs)\""
---
[W11] Warning: Found redundant pattern bind in function argument
   ╭─[<temp_file_path>:1:2]
   │
 1 │ ({ ... } @ inputs: inputs)
   ·  ────────┬───────  
   ·          ╰───────── This pattern bind is redundant, use inputs instead
───╯
